# voice-bridge

./: .gitignore  .oxlintrc.json  .tool-versions  LICENSE  README.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.base.json  tsconfig.json
.claude/: settings.json
.claude/agents/: pr-generator.md  senior-swe.md
docs/: best-practice.md
plans/: architecture.md  backlog.md  initial-requirement.md  project-plan.md  risk-register.md
plans/phases/: phase-01.md  phase-02.md  phase-03.md  phase-04.md  phase-05.md  phase-06.md  phase-07.md  phase-08.md  phase-09.md
projects/api/: package.json
projects/api-gateway/: package.json  tsconfig.json
projects/client-app/: package.json  tsconfig.json
projects/core/: package.json  tsconfig.json  tsconfig.test.json  vitest.config.ts
projects/core/src/__fixtures__/audio/: generateFixtures.ts
projects/core/src/__tests__/: testConfig.ts
projects/core/src/audio/: AudioBuffer.ts  AudioConverter.ts  AudioPreprocessor.ts  AudioResampler.ts  index.ts
projects/core/src/audio/__tests__/: AudioBuffer.test.ts  AudioConverter.test.ts  AudioResampler.test.ts
projects/core/src/errors/: AudioProcessingError.ts  PipelineError.ts  TTSError.ts  TranslationError.ts
projects/core/src/interfaces/: IASR.ts  IModelManager.ts  ITTS.ts  ITranslator.ts  IVAD.ts
projects/core/src/services/asr/: DistilWhisperASR.ts
projects/core/src/services/model-manager/: ModelManager.ts  ModelRegistry.ts
projects/core/src/services/pipeline/: AsyncQueue.ts  index.ts  (+5 more)
projects/xtts-server/: README.md  main.py  pyproject.toml  verify.py
(+28 files in other folders)
